<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="282dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/resize" />

    <TextView
        android:id="@+id/textView2"
        android:layout_gravity="center"
        android:layout_width="240sp"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:text="Dhaka-Chittagong-Dhaka" />

    <LinearLayout
        android:layout_marginTop="10sp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/textView8"
            android:layout_gravity="center"
            android:layout_width="200sp"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:text="Business Class: 1800 BDT"
            android:textColor="@color/red_100"/>

        <TextView
            android:id="@+id/textView9"
            android:layout_gravity="center"
            android:layout_width="160sp"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:text="Premium: 1000 BDT"
            android:textColor="@color/purple_500"/>

        <TextView
            android:id="@+id/textView10"
            android:layout_gravity="center"
            android:layout_width="200sp"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:text="Economy class: 600 BDT"
            android:textColor="@color/design_default_color_primary_dark"/>


    </LinearLayout>





    <TextView
        android:id="@+id/textView4"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="30sp"
        android:layout_gravity="left"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:textColor="@color/red_100"
        android:text="@string/app_Passenger" />





<!--    <LinearLayout-->
<!--        android:layout_marginTop="10sp"-->
<!--        android:orientation="horizontal"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        >-->

<!--        <TextView-->
<!--            android:id="@+id/textView5"-->

<!--            android:layout_marginLeft="50sp"-->
<!--            android:layout_gravity="left"-->
<!--            android:layout_width="40sp"-->
<!--            android:textSize="15sp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textColor="@color/red_100"-->
<!--            android:text="From:" />-->

<!--    <Spinner-->
<!--        android:id="@+id/classSpinner"-->
<!--        android:layout_width="110sp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@+id/tvDemo"-->

<!--        android:entries="@array/items_class"/>-->

<!--        <TextView-->
<!--            android:id="@+id/textView6"-->

<!--            android:layout_marginLeft="60sp"-->
<!--            android:layout_gravity="left"-->
<!--            android:layout_width="20sp"-->
<!--            android:textSize="15sp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textColor="@color/red_100"-->
<!--            android:text="To:" />-->

<!--        <Spinner-->
<!--            android:layout_marginRight="50sp"-->
<!--            android:id="@+id/classSpinner1"-->
<!--            android:layout_width="150sp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_below="@+id/tvDemo"-->

<!--            android:entries="@array/items_class1"/>-->


<!--    </LinearLayout>-->









    <EditText
        android:id="@+id/editName"
        android:layout_width="280sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/app_Name" />

    <EditText
        android:id="@+id/editAddress"
        android:layout_width="280sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/app_Address" />

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="280sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/app_Phone" />

    <EditText
        android:id="@+id/editNid"
        android:layout_width="280sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/app_NID" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="280sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/app_Email" />


    <LinearLayout
        android:layout_marginTop="15sp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radioGroup"
           >


        <RadioButton
            android:id="@+id/radioB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:checked="false"
            android:text="Business class"
          />

        <RadioButton
            android:id="@+id/radioP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:checked="false"
            android:text="Premium"
          />

        <RadioButton
            android:id="@+id/radioE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:checked="false"
            android:text="Economey class"
            />

        </RadioGroup>


    </LinearLayout>

    <Button
        android:id="@+id/btnCoach"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:text="Next"
        app:backgroundTint="@color/red_100" />




</LinearLayout>
</ScrollView>