<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="103dp"
        app:srcCompat="@drawable/resize" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:textColor="@color/red_200"
        android:textSize="20sp"
        android:layout_marginTop="40sp"
        android:text="@string/app_Time" />


    <LinearLayout
        android:layout_marginTop="10sp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/textView5"

            android:layout_marginLeft="40sp"
            android:layout_gravity="left"
            android:layout_width="40sp"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:textColor="@color/red_100"
            android:text="Time:" />

        <Spinner
            android:id="@+id/timeSpinner"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDemo"

            android:entries="@array/items_Time"/>

        <TextView
            android:id="@+id/textView6"

            android:layout_marginLeft="5sp"
            android:layout_gravity="left"
            android:layout_width="40sp"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:textColor="@color/red_100"
            android:text="Date:" />

        <Spinner
            android:layout_marginRight="60sp"
            android:id="@+id/dateSpinner"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDemo"

            android:entries="@array/items_Date"/>


    </LinearLayout>

    <TextView
        android:id="@+id/textNID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:textColor="@color/red_200"
        android:textSize="20sp"
        android:visibility="invisible"
        android:layout_marginTop="40sp"
        android:text="passenger Nid" />






    <TextView
        android:id="@+id/textFrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:textColor="@color/red_200"
        android:textSize="20sp"
        android:layout_marginTop="40sp"
        android:text="@string/app_Destination" />

    <LinearLayout
        android:layout_marginTop="10sp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/textF"

            android:layout_marginLeft="50sp"
            android:layout_gravity="left"
            android:layout_width="40sp"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:textColor="@color/red_100"
            android:text="From:" />

        <Spinner
            android:id="@+id/spFrom"
            android:layout_width="110sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDemo"

            android:entries="@array/items_class"/>

        <TextView
            android:id="@+id/textT"

            android:layout_marginLeft="60sp"
            android:layout_gravity="left"
            android:layout_width="20sp"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:textColor="@color/red_100"
            android:text="To:" />

        <Spinner
            android:layout_marginRight="50sp"
            android:id="@+id/spTo"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDemo"

            android:entries="@array/items_class1"/>


    </LinearLayout>


















    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:textColor="@color/red_200"
        android:textSize="20sp"
        android:layout_marginTop="40sp"
        android:text="@string/app_Coach" />

    <LinearLayout

        android:layout_marginTop="20sp"
        android:orientation="horizontal"
        android:layout_width="380sp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        >


        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="90dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/images" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="Scania R500 ; 3-3 seat configuration"
            app:backgroundTint="@color/red_200" />
    </LinearLayout>


    <LinearLayout

        android:layout_marginTop="20sp"
        android:orientation="horizontal"
        android:layout_width="380sp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        >


        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="90dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/bus" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Scania P410 8x4 ; 3-3 seat configuration"
            app:backgroundTint="@color/red_100" />
    </LinearLayout>

</LinearLayout>